# pub-Stock-Trader

./: .env.example  .env.local  .env.prod  .gitignore  AGENTS.md  COMPLIANCE.md  Cargo.toml  Makefile  Procfile.dev  README.en.md  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml
apps/tui/: Cargo.toml
apps/tui/src/: main.rs  model.rs
core/risk-engine/: .env.local  .env.prod  Cargo.toml  Dockerfile
core/risk-engine/data/: paper_book.json
core/risk-engine/src/: main.rs  paper.rs  paper_db.rs  risk.rs
services/agents/: .env.local  .env.prod  Dockerfile  pyproject.toml
services/agents/app/: main.py
services/agents/app/api/: agents.py  control.py  notify.py
services/agents/app/core/: config.py
services/agents/app/schemas/: agents.py
services/agents/app/services/: control.py  notifier.py  orchestrator.py  self_correction.py
services/agents/tests/: conftest.py  test_agents.py  test_control.py  test_notify.py  test_self_correction.py
services/analysis/: .env.local  .env.prod  Dockerfile  pyproject.toml
services/analysis/app/: main.py
services/analysis/app/api/: backtest.py  breadth.py  indicators.py  intraday_indicators.py  prediction.py  screener.py
services/analysis/app/core/: config.py  offload.py
services/analysis/app/schemas/: backtest.py  indicators.py  prediction.py  screener.py
services/analysis/app/services/: backtest.py  breadth.py  c51_backtest.py  channels.py  dpg_backtest.py  dqn_backtest.py  indicators.py  intraday_indicators.py  lstm_model.py  predictor.py  qrdqn_backtest.py  rl_backtest.py  screener.py
services/analysis/tests/: conftest.py  test_analysis.py  test_channels.py  test_lstm_backtest.py
services/ingest/: .env.local  .env.prod  Dockerfile  pyproject.toml
services/ingest/app/: db.py  main.py
services/ingest/app/api/: esg.py  intraday.py  krx.py  market.py  news.py  orderbook.py  scheduler.py
services/ingest/app/core/: config.py
services/ingest/app/schemas/: market.py  news.py  orderbook.py
services/ingest/app/services/: adaptive_flow.py  alert_store.py  batch_scheduler.py  broker_adapters.py  broker_auth.py  broker_feed.py  broker_heartbeat.py  broker_multiplex.py  broker_token.py  esg_store.py  finance_reader.py  intraday.py  krx_openapi.py  market_alert_service.py  mcp_server.py  news_crawler.py  ohlcv_store.py  orderbook.py  redis_streams.py  shortsell_store.py
services/ingest/tests/: conftest.py  test_adaptive_flow.py  test_batch_scheduler.py  test_broker_adapters.py  test_broker_auth.py  test_broker_feed.py  test_broker_heartbeat.py  test_broker_multiplex.py  test_broker_token.py  test_krx_openapi.py  test_market.py  test_market_alert_shortsell.py  test_news.py  test_orderbook.py
services/rag/: .env.local  .env.prod  Dockerfile  pyproject.toml
services/rag/app/: main.py
services/rag/app/api/: rag.py
services/rag/app/core/: config.py
services/rag/app/schemas/: rag.py
services/rag/app/services/: answerer.py  embeddings.py  pgvector_store.py  vector_store.py
services/rag/tests/: conftest.py  test_pgvector_integration.py  test_rag.py
test/dev-env/: README.md  result.md  scenario.md
test/impl/1/: result.md  scenario.md
test/impl/10/: result.md  (+1 more)
tools/mpm/: mpm.py  test_mpm.py
web/: .dockerignore  .env.local  package.json  pnpm-lock.yaml
(+124 files in other folders)
