[project]
name = "agents"
version = "0.1.0"
description = "stock-trader — LLM 멀티에이전트 오케스트레이터 (F3.1)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "httpx>=0.27",
  "anthropic>=0.40",
  # 고급 그래프 오케스트레이션 전환 시 활성화:
  #   "langchain>=0.3", "langchain-anthropic>=0.3", "langgraph>=0.2", "redis>=5"
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
