[project]
name = "analysis"
version = "0.1.0"
description = "stock-trader — 기술지표·시계열예측·스크리너 서비스 (F2)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pandas>=2.2",
  "numpy>=2.0",
  "ta>=0.11",
  "finance-datareader>=0.9",
  "torch>=2.2",
  "transformers>=4.40",
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.5", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
