[project]
name = "ingest"
version = "0.1.0"
description = "stock-trader — 실시간 시세·뉴스·FastMCP 데이터 수집 (F1)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "websockets>=13",
  "httpx>=0.27",
  "mcp[cli]>=1.9",
  "redis>=5",
  "finance-datareader>=0.9",
  "feedparser>=6.0",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "apscheduler>=3.10,<4",
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.5", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
