[project]
name = "rag"
version = "0.1.0"
description = "stock-trader — Quant RAG · 금융문서 벡터검색·환각차단 (F3.2)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "anthropic>=0.40",
  "pgvector>=0.3",
  "psycopg[binary]>=3.2",
  # 고급 오케스트레이션 필요 시:
  #   "langchain>=0.3", "langchain-anthropic>=0.3", "langgraph>=0.2"
]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27", "ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
